<resources>
    <string name="app_name">Project Holiday</string>


    <!-- Licensing Information -->
    <string name="api_license_owa">Forecast weather data is collected using the OpenWeatherMap API; http://www.openweathermap.org/.</string>
    <string name="api_license_wu">Climate data is collected using the WeatherUnderground API; http://www.wunderground.com/.</string>

    <!-- Explanation Fragment -->
    <string name="welcome">Welcome to %s</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="proceed">Proceed</string>


    <string name="explanation1">Welcome! This app will help you packing your stuff when you  your holiday.</string>
    <string name="explanation2">Tell us where you are going to, when you are leaving and how long you will stay. The app will then calculate what you should bring.</string>
    <string name="explanation3">Are there any major weather changes? Then you will be notified so that you can check your packing list for any changes.</string>
    <string name="explanation4">Ready? Press the button to plan your first trip!</string>


    <!-- PlanActivity -->
    <string name="where_going_to">Where are you headed?</string>
    <string name="when_going">When do you leave?</string>
    <string name="how_many_night">How many nights are you staying?</string>
    <string name="dresses">Do you wear dresses?</string>

    <string name="loc_hint">London, Paris, Nijmegen…</string>
    <string name="date_hint">16–05–2015</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="plan">Plan</string>
    <string name="date_notpossible">The selected date is not available</string>
    <string name="location_notfound">The entered location could not be found</string>
    <string name="no_date">No date selected</string>

    <!-- NoPlanFragment -->
    <string name="no_plan">You don\'t have a planned trip.\nPress the button below to plan a new trip.</string>
    <string name="plan_new_trip">Plan new trip</string>

    <!-- PlanFragment -->
    <string name="remove_plan">Remove current trip</string>
    <string name="about">About</string>
    <string name="trip_to">Your planned trip to: %s</string>
    <string name="unknown_error">Something went wrong!</string>
    <string name="current_weather">Current weather</string>
    <string name="check_changes">Tap to check for changes</string>
    <string name="packinglist_changed">Your packing list changed!</string>
    <string name="reopen_explanation">Open explanation</string>
    <string name="no_connection">We could not find a working network connection. Do you want to check your Wi-Fi connection?</string>

</resources>
