<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:contentPaddingBottom="12dp"
            app:contentPaddingTop="12dp"
            app:cardBackgroundColor="@android:color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/where_going_to"
                    style="@style/Base.TextAppearance.AppCompat.Subhead" />
                <EditText
                    android:id="@+id/location_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:singleLine="true"
                    android:hint="@string/loc_hint" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:contentPaddingBottom="12dp"
            app:contentPaddingTop="12dp"
            app:cardBackgroundColor="@android:color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/when_going"
                    style="@style/Base.TextAppearance.AppCompat.Subhead" />
                <EditText
                    android:id="@+id/date_input"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:singleLine="true"
                    android:hint="@string/date_hint"
                    android:focusable="false" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:contentPaddingBottom="12dp"
            app:contentPaddingTop="12dp"
            app:cardBackgroundColor="@android:color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_many_night"
                    style="@style/Base.TextAppearance.AppCompat.Subhead" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top">
                    <EditText
                        android:id="@+id/progress_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="40dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:inputType="number"
                        android:clickable="false"
                        android:focusable="false"
                        android:enabled="false" />
                    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                        android:id="@+id/progress_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/progress_input"
                        android:layout_toStartOf="@id/progress_input"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        app:dsb_min="2"
                        app:dsb_max="30"
                        app:dsb_progressColor="@color/accent"
                        app:dsb_trackColor="@color/accent"
                        app:dsb_indicatorColor="@color/accent" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:contentPaddingBottom="12dp"
            app:contentPaddingTop="12dp"
            app:cardBackgroundColor="@android:color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dresses"
                    style="@style/Base.TextAppearance.AppCompat.Subhead" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_top">
                    <ToggleButton
                        android:id="@+id/dresses_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOn="@string/yes"
                        android:textOff="@string/yes"
                        />
                    <ToggleButton
                        android:id="@+id/dresses_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOn="@string/no"
                        android:textOff="@string/no"
                        />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/plan_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="30dp"
            android:text="@string/plan"
            android:theme="@style/Theme.ProjectHoliday.PlanButton" />

    </LinearLayout>

</ScrollView>